feat: crud tickets
